--- a/Proj/readme.org
+++ b/Proj/readme.org
@@ -8918,7 +8918,7 @@ public:
 	 #+BEGIN_SRC bash
 	 QObject::startTimer: Timers cannot be started from another thread 
 	 #+END_SRC
-*** ☛ TODO PRIORITIES [9/14]
+*** ☛ TODO PRIORITIES [10/14]
     :LOGBOOK:
     - State "☛ TODO"     from              [2022-01-06 qui 01:35]
     :END:
@@ -9372,7 +9372,7 @@ OpenCV provides an API for linear blending of two images. The calculation formul
        4) If =cur_timeslot == ad_timeslot=
 	  1) =cur_ad = ad=
 	  2) =cur_ad.enable()=
-11) [ ] Create thread for videoManager
+11) [X] Create thread for videoManager
     1) while(1)
        1) =if cur_ad.enabled()=
 	  1) get =media_files= urls
@@ -9383,6 +9383,27 @@ OpenCV provides an API for linear blending of two images. The calculation formul
 		1) if !cur_ad_enabled() || appmode
 	     4) Go to 2)
        2) else, do nothing
-12) [ ] Create thread for fragranceDiffuser
+12) [-] Create thread for fragranceDiffuser
+    1) [X] Create Fragrance class
+    2) [X] Create Fragrance Manager class
+    3) [X] Create Fragrance Diffuser class
+    4) [ ] if =cur_ad.enabled()=
+       1) [ ] Get fragrance from it
+       2) [ ] Look in FragranceManager for its settings
+       3) [ ] Assign fragrance to the FragranceDiffuser
+       4) [ ] Get On and Off times from fragrances
+       5) [ ] Load timer
+       6) [ ] When timer expires, reload with the other value
 13) [ ] Create thread to download files
 14) [ ] Implement client-server architecture
+    1) [ ] Create thread to receive frames
+    2) [ ] Create thread to process frames
+*** Frames
+1) Ad
+2) Tamanho do buffer daqui para a frente
+3) nome do ficheiro
+4) link
+5) fragrance_id
+6) filter_id
+7) timeSlot_id
+8) enabled
