--- a/Proj/readme.org
+++ b/Proj/readme.org
@@ -8922,7 +8922,7 @@ public:
 	 #+BEGIN_SRC bash
 	 QObject::startTimer: Timers cannot be started from another thread 
 	 #+END_SRC
-*** ☛ TODO PRIORITIES [11/14]
+*** ☛ TODO PRIORITIES [10/12]
     :LOGBOOK:
     - State "☛ TODO"     from              [2022-01-06 qui 01:35]
     :END:
@@ -9367,41 +9367,46 @@ OpenCV provides an API for linear blending of two images. The calculation formul
 9) [X] Reproduce video with audio
    1) See [[id:5f018c90-4ae0-46ec-bb23-1c9829d0d068][setup]] to know how to instantiate a mediaPlayer object
    2) Open URL from folder
-10) [ ] Create thread to check if normalMode must run
-    1) Create a timer to trigger periodically (every hour)
-    2) Create a callback
-       1) Get current time
-       2) Convert it to time from beginning of week: =cur_timeslot=
-       3) Get Ad stored timeslot (in ads)
-       4) If =cur_timeslot == ad_timeslot=
-	  1) =cur_ad = ad=
-	  2) =cur_ad.enable()=
-11) [X] Create thread for videoManager
-    1) while(1)
-       1) =if cur_ad.enabled()=
-	  1) get =media_files= urls
-	  2) For each =media_file_url=
-	     1) Set =media_file_url=
-	     2) Play video
-	     3) =while (_mediaPlayer.State() !=QMediaPlayer::StoppedState)=
-		1) if !cur_ad_enabled() || appmode
-	     4) Go to 2)
-       2) else, do nothing
-12) [X] Create thread for fragranceDiffuser
-    1) [X] Create Fragrance class
-    2) [X] Create Fragrance Manager class
-    3) [X] Create Fragrance Diffuser class
-    4) [X] if =cur_ad.enabled()=
-       1) [X] Get fragrance from it
-       2) [X] Look in FragranceManager for its settings
-       3) [X] Assign fragrance to the FragranceDiffuser
-       4) [X] Get On and Off times from fragrances
-       5) [X] Load timer
-       6) [X] When timer expires, reload with the other value
-13) [ ] Create thread to download files
-14) [ ] Implement client-server architecture
-    1) [ ] Create thread to receive frames
-    2) [ ] Create thread to process frames
+10) [X] Create a timer to trigger periodically (every hour) and the respective
+    callback
+    1) Normal mode
+       1) Create a callback
+	  1) Get current time
+	  2) Convert it to time from beginning of week: =cur_timeslot=
+	  3) Get Ad stored timeslot (in ads)
+	  4) If =cur_timeslot == ad_timeslot=
+	     1) =cur_ad = ad=
+	     2) =cur_ad.enable()=
+       2) [X] Handle videoManager
+	  1) while(1)
+	  2) =if cur_ad.enabled()=
+	     1) get =media_files= urls
+	     2) For each =media_file_url=
+		1) Set =media_file_url=
+		2) Play video
+		3) =while (_mediaPlayer.State() !=QMediaPlayer::StoppedState)=
+		   1) if !cur_ad_enabled() || appmode
+		4) Go to 2)
+	  3) else, do nothing
+       3) [X] Handle diffuser for fragranceDiffuser
+	  1) [X] Create Fragrance class
+	  2) [X] Create Fragrance Manager class
+	  3) [X] Create Fragrance Diffuser class
+	  4) [X] if =cur_ad.enabled()=
+	  5) [X] Get fragrance from it
+	  6) [X] Look in FragranceManager for its settings
+	  7) [X] Assign fragrance to the FragranceDiffuser
+	  8) [X] Get On and Off times from fragrances
+	  9) [X] Load timer
+	  10) [X] When timer expires, reload with the other value
+    2) Check for interaction mode
+       1) If user detected AND (=mode == Welcome OR mode == NORMAL=)
+	  1) OnInterMode_pressed();
+11) [ ] Implement client-server architecture
+    1) [ ] Connect to server: bool connectToRemote()
+    2) [ ] Create thread to receive frames
+    3) [ ] Create thread to process frames
+12) [ ] Create thread to download files
 *** Frames
 1) Ad
 2) Tamanho do buffer daqui para a frente
