My part of report done

--- a/Proj/report/dissertation.tex
+++ b/Proj/report/dissertation.tex
@@ -155,25 +155,25 @@
   \setcounter{table}{0}
   \setcounter{figure}{0}
 %
-  \include{./tex/Chap/2-Analysis/ANALYSIS}
-\setcounter{table}{0}
-\setcounter{figure}{0}
+%  \include{./tex/Chap/2-Analysis/ANALYSIS}
+%\setcounter{table}{0}
+%\setcounter{figure}{0}
 %
-\include{./tex/Chap/3-Theor-Found/THEOR-FOUND}
-\setcounter{table}{0}
-\setcounter{figure}{0}
-%%
-\include{./tex/Chap/4-Design/DESIGN}
-\setcounter{table}{0}
-\setcounter{figure}{0}
-%
-%\include{./tex/Chap/4-Implem/IMPLEM}
+%\include{./tex/Chap/3-Theor-Found/THEOR-FOUND}
 %\setcounter{table}{0}
 %\setcounter{figure}{0}
 %%
-%\include{./tex/Chap/5-Test/TEST}
+%\include{./tex/Chap/4-Design/DESIGN}
 %\setcounter{table}{0}
 %\setcounter{figure}{0}
+%
+\include{./tex/Chap/5-Implem/IMPLEM}
+\setcounter{table}{0}
+\setcounter{figure}{0}
+%%
+\include{./tex/Chap/6-Test/TEST}
+\setcounter{table}{0}
+\setcounter{figure}{0}
 %%
 %\include{./tex/Chap/6-Verif-Valid/VERIF-VALID}
 %\setcounter{table}{0}
