--- a/readme.org
+++ b/readme.org
@@ -1,130 +1,51 @@
-#+TITLE: ESRG Sem1
+#+TITLE: Marketing Digital Outdoor (MDO)
 #+AUTHOR: José Pires
 #+DATE: [2021-10-19 ter 12:04]
 #+EMAIL: a50178@alunos.uminho.pt
 
 * Preamble
-  This repository contains all the info related to ESRG Semester 1.
-  
-** Doc struct [8/8]
-- [X] Preamble: introduces the main aspects about the ESRG Semester 1.
-- [X] Project: contains the project requirements, notes, deadlines, etc.
-- [X] Tools: presents the required tools for this course.
-- [X] Work Assignments: contains the info related to the assignments given
-  during this semester.
+The Marketing Digital Outdoor (MDO) is a marketing scenting device with video
+and audio capabilities which allows the user to interact with the device through
+hand gestures.
 
-* Project
-- see [[id:ea2d2209-c1f3-4de8-9acb-90bca065b262][here]]
-* Tools
-** Project management
- 1) Latex:
-    - Overleaf
-    - Linux
-      #+begin_src bash
-	sudo apt install texlive-latex-extra # basic
-	sudo apt install texlive-xetex # compiler
-	sudo apt install tex-lang-portuguese # lang
-	sudo apt install texlive-science # 
-      #+end_src
- 2) Git:
-    1) code
-    2) doc
-    3) readme
-    4) writing
-       #+begin_src bash
- sudo apt install git
-       #+end_src
- 3) Diagram Tool:
-    1) Draw.io
-    2) Block diagram
-    3) Flowcharts
-    4) Class Diagram
-    5) Sequence diagram
-    6) State-machine diagram
-    7) Deployment diagram
- 4) Gantt diagram: project management
-    1) Define the project outline
-    2) Tool: Project Libre: https://www.projectlibre.com/
- 5) Doxygen: source code documentation
-** Software
-1) Linux
-2) Buildroot
-3) Raspberry Pi 4B
-4) Ethernet cable
-5) SD card reader
-6) USB-to-serial converter: boot process
-7) Makefiles
-   
-* Work Assignments
-** 1
-*** Problem statement
-    Design a remote control with three buttons that can
-remotely control the television (TV). It should be very
-light, powered by batteries and controls your TV via an
-infrared emitter. The TV has a built-in infrared receiver. A
-button on the remote control switches the TV on/off and
-will be labeled with the word "Power". The other two
-buttons are used to scroll up/down and select the available
-channels and they are labeled with the arrows up/down.
-*** Market research
-- Brief description of a remote TV control
-- Bill of materials
-- Unit cost
-- Time to market
-- Sales/Quantity of sold items anually
-*** Requirements & Constraints
-**** Requirements
-- Remotely operated
-- Low weight
-- Powered by batteries
-- 3 buttons:
-  1) Power
-  2) Up
-  3) Down
-- Infrared emitter response time (system output response time): 100 ms
-- The TV remote may be upgraded in the future to use more buttons
-**** Constraints
-- Contains an infrared emitter (the TV already has an infrared receiver)
-- The TV remote control must supply the required data frames imposed by the TV
-  manufacturer
-- Data frames may not be provided by the client
-- Security concerns are defined by the data frames and the specific
-  communication frequency imposed by the TV manufacturer
-- 1 week deadline: 14 h
-- 2 people
-- Budget:
-  - HW (parts acquisition and assembly): fixed costs --- 1 EUR/unit
-    - TV remote Shell
-    - TV remote membrane
-    - LED
-    - Data acquisition & Infrared emitter PCB
-  - Development: project
-    - 20 EUR per hour per person: 20 * 14 * 2 = 560 EUR + IVA
-*** Design
-**** HW specification
-- Block diagram with COTS components, if possible
-- List of constraints of functions to be implemented in HW or SW
-  - Inclusion of a multiplexer may reduce SW burden
-  - CPU peripherals:
-    - PCA for wave generation
-**** HW interfaces definition
-- I/O ports
-- HW registers
-- Memory addresses for shared or I/O by memory mapping
-- HW interrupts
-**** SW specification: Top-down methodology
-1. Identify main subsystems
-   1. Signal input detector
-   2. Event handler
-   3. Output generator
-**** SW interfaces definition
-- Define the APIs in detail:
-  - header files with:
-    - functions prototypes
-    - data structure declarations
-    - class declarations
-**** Start-up/shutdown process specification
-**** Error handling specification
-- Create error-handling routines
-- Watchdog timer can be used for system recovery
-**** Design verification
+file:Proj/report/img/hw-all-crop.jpg
+  
+** Features [10/10]
+- [X] Advertising through a screen and speakers;
+- [X] Have fragrance diffusion;
+- [X] Take pictures and GIFs;
+- [X] Detect a user in range of the device;
+- [X] Contactless user interaction through gesture recognition;
+- [X] Camera feed and facial detection;
+- [X] Apply brand-specific image filters;
+- [X] Enable sharing multimedia across social media;
+- [X] Provide a remote user interface for brands to purchase and configure the advertisements;
+- [X] Provide a remote user interface for company staff to monitor and control the MDO local system.
+
+** Technologies [13/13]
+1. [X] Computer vision for facial and gesture recognition (OpenCV)
+2. [X] Database for marketing digital outdoor management (SQL)
+3. [X] Website/Application for brands communication to our database
+4. [X] Wireless communication technology for remote communication with digital outdoors
+5. [X] Image filter application
+6. [X] Infrared detection
+7. [X] Camera recording
+8. [X] Audio output
+9. [X] Nebulizer technology for scenting
+10. [X] Screen mapping to keys for virtual keyboard
+11. [X] Social media and e-mail sharing APIs
+12. [X] Embedded Linux to support the device features
+13. [X] Qt for UI development
+
+* HW architecture
+
+[[file:Proj/report/img/hw-arch.png]]
+
+[[file:Proj/report/img/hw-arch-complete.png]]
+
+* SW architecture
+
+[[file:Proj/report/img/sys-overview.png]]
+
+* Extra information
+- see [[file:Proj/readme.org]]
